curriki-tsugi/db/service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    template.openshift.io/expose-uri: 'mysql://{.spec.clusterIP}:{.spec.ports[?(.name=="mysql")].port}'
  name: curriki-tsugi-mysql
  creationTimestamp: '2020-11-24T11:20:11Z'
  labels:
    app.kubernetes.io/component: curriki-tsugi-mysql
    app.kubernetes.io/instance: curriki-tsugi-mysql
    app.kubernetes.io/part-of: curriki
    template: mysql-persistent-template
spec:
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    name: curriki-tsugi-mysql
  type: ClusterIP
  sessionAffinity: None
